--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Run Buddy</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <!--Navigation-->
     <header>
-      <h1><a href="/">RUN BUDDY</a></h1>
+      <h1>RUN BUDDY</h1>
       <nav>
         <ul>
           <li>
