added the hero section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,47 @@
     </header>
 
     <!--hero/jumbotron-->
-    <section></section>
+    <section>
+      <div>
+        <h3>Get Started Today</h3>
+        <p>
+          Fill out this form and one of our trainers will schedule a
+          consultation
+        </p>
+        <!--Add form element-->
+        <form action="">
+          <label for="name">Enter full name</label>
+          <input type="text" placeholder="Your Name" name="name" id="name" />
+          <label for="email">Enter email address</label>
+          <input
+            type="email"
+            placeholder="Your Email Address"
+            name="email"
+            id="email"
+          />
+          <label for="phonenumber">Enter phone number</label>
+          <input
+            type="tel"
+            placeholder="Your Phone Number"
+            name="phonenumber"
+            id="phonenumber"
+          />
+          <p>Have you worked out with a trainer before?</p>
+          <input type="radio" name="trainer-confirm" id="trainer-yes" />
+          <label for="trainer-yes">Yes</label>
+          <input type="radio" name="trainer-confirm" id="trainer-no" />
+          <label for="trainer-no">No</label>
+
+          <p>
+            <input type="checkbox" id="checkbox" name="age-confirm" />
+            <label for="checkbox"
+              >I acknowledge that I am atleast 18 years of age</label
+            >
+          </p>
+          <button type="submit">Get Running!</button>
+        </form>
+      </div>
+    </section>
 
     <!--"what we do" section-->
     <section>
