--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     </header>
 
     <!--hero/jumbotron-->
-    <section>
-      <div>
+    <section class="hero">
+      <div class="hero-form">
         <h3>Get Started Today</h3>
         <p>
           Fill out this form and one of our trainers will schedule a
@@ -40,10 +40,17 @@
         <!--Add form element-->
         <form action="">
           <label for="name">Enter full name</label>
-          <input type="text" placeholder="Your Name" name="name" id="name" />
+          <input
+            type="text"
+            class="form-input"
+            placeholder="Your Name"
+            name="name"
+            id="name"
+          />
           <label for="email">Enter email address</label>
           <input
             type="email"
+            class="form-input"
             placeholder="Your Email Address"
             name="email"
             id="email"
@@ -51,15 +58,18 @@
           <label for="phonenumber">Enter phone number</label>
           <input
             type="tel"
+            class="form-input"
             placeholder="Your Phone Number"
             name="phonenumber"
             id="phonenumber"
           />
-          <p>Have you worked out with a trainer before?</p>
-          <input type="radio" name="trainer-confirm" id="trainer-yes" />
-          <label for="trainer-yes">Yes</label>
-          <input type="radio" name="trainer-confirm" id="trainer-no" />
-          <label for="trainer-no">No</label>
+          <p>
+            Have you worked out with a trainer before?
+            <input type="radio" name="trainer-confirm" id="trainer-yes" />
+            <label for="trainer-yes">Yes</label>
+            <input type="radio" name="trainer-confirm" id="trainer-no" />
+            <label for="trainer-no">No</label>
+          </p>
 
           <p>
             <input type="checkbox" id="checkbox" name="age-confirm" />
