--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </section>
 
     <!--"what we do" section-->
-    <section id="what-we-do">
+    <section id="what-we-do" class="intro">
       <h2>What We Do</h2>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore
