--- a/index.html
+++ b/index.html
@@ -126,8 +126,50 @@
     </section>
 
     <!--"meet the trainers" section-->
-    <section>
-      <h2>Meet The Trainers</h2>
+    <section id="your-trainers" class="trainers">
+      <h2 class="section-title primary-border">Meet The Trainers</h2>
+      <!--First trainer-->
+      <article class="trainer">
+        <img
+          src="/assets/images/trainer-1.jpg"
+          alt="Aaron Stephens is his name"
+        />
+        <div class="trainer-bio text-left">
+          <h3>Aaron Stephens</h3>
+          <h4>Speed / Strength</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae
+            quo, quis dolor adipisci odio deserunt sunt illum. Tempore odio quos
+            animi numquam soluta. Commodi illum voluptate ad sunt, quas autem.
+          </p>
+        </div>
+      </article>
+      <!--Second trainer-->
+      <article class="trainer">
+        <div class="trainer-bio text-right">
+          <h3>Joanna Gill</h3>
+          <h4>Endurance</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae
+            quo, quis dolor adipisci odio deserunt sunt illum. Tempore odio quos
+            animi numquam soluta. Commodi illum voluptate ad sunt, quas autem.
+          </p>
+        </div>
+        <img src="/assets/images/trainer-2.jpg" alt="Joanna Gill is her name" />
+      </article>
+      <!--Third trainer-->
+      <article class="trainer">
+        <img src="/assets/images/trainer-3.jpg" alt="Harry Smith is his name" />
+        <div class="trainer-bio text-left">
+          <h3>Harry "The Headband" Smith</h3>
+          <h4>Strength</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae
+            quo, quis dolor adipisci odio deserunt sunt illum. Tempore odio quos
+            animi numquam soluta. Commodi illum voluptate ad sunt, quas autem.
+          </p>
+        </div>
+      </article>
     </section>
 
     <!--Reach out section-->
