--- a/index.html
+++ b/index.html
@@ -175,6 +175,31 @@
     <!--Reach out section-->
     <section>
       <h2>Reach Out</h2>
+      <div class="contact-info">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d45153.421307922516!2d-93.27950618872133!3d44.982506533216394!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x52b32db3da79f561%3A0xae145916e9974058!2sTarget!5e0!3m2!1sen!2sus!4v1645898132613!5m2!1sen!2sus"
+          width="400"
+          height="400"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+        ></iframe>
+        <div>
+          <h3>Run Buddy</h3>
+          <p>
+            Any questions or concerns before signing up?
+            <br />
+            Let us know and we'll be happy to talk to you!
+          </p>
+          <address>
+            55 Main Street <br />
+            Some Town, CA <br />
+            12345 <br />
+            P: 555.RUN.BUDZ (555.786.2839) <br />
+            E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+          </address>
+        </div>
+      </div>
     </section>
 
     <!--footer-->
