--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <!--Navigation-->
     <header>
-      <h1>RUN BUDDY</h1>
+      <h1 class="#run-buddy"><a href="#run-buddy">RUN BUDDY</a></h1>
       <nav>
         <ul>
           <li>
@@ -189,14 +189,12 @@
             <br />
             Let us know and we'll be happy to talk to you!
           </p>
-          <address>
+          <address class="address">
             55 Main Street <br />
             Some Town, CA <br />
             12345 <br />
-            <p>
-              P: 555.RUN.BUDZ (555.786.2839) <br />
-              E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
-            </p>
+            P: 555.RUN.BUDZ (555.786.2839) <br />
+            E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
           </address>
         </div>
       </div>
@@ -206,7 +204,10 @@
     <footer>
       <h2>❤️ Made with love by Run Buddy</h2>
       <div>
-        <a href="#">Read Our Privacy Policy</a> <br />
+        <a href="./privacy-policy.html#privacy-policy"
+          >Read Our Privacy Policy</a
+        >
+        <br />
         &copy;2019 Run Buddy, Inc.
       </div>
     </footer>
