add content to hero, replace image

--- a/index.html
+++ b/index.html
@@ -31,6 +31,18 @@
 
     <!--hero/jumbotron-->
     <section class="hero">
+      <div class="build-habits">
+        <h2>Start Building Habits</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus ab
+          suscipit nulla sit ullam itaque sapiente numquam distinctio fuga
+          ratione totam placeat dolor et, consequatur dicta, sed eaque magni.
+          Quis non perferendis, doloribus nihil saepe pariatur, ut eveniet, id
+          eligendi magni sunt ab alias nisi unde. Laborum reiciendis ea officia
+          quas accusamus, provident, dolorem aperiam sequi, debitis vero et
+          facere.
+        </p>
+      </div>
       <div class="hero-form">
         <h3>Get Started Today</h3>
         <p>
