--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
     <!--Reach out section-->
     <section id="reach-out" class="contact">
       <h2 class="section-title secondary-border">Reach Out</h2>
+
       <div class="contact-info">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d45153.421307922516!2d-93.27950618872133!3d44.982506533216394!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x52b32db3da79f561%3A0xae145916e9974058!2sTarget!5e0!3m2!1sen!2sus!4v1645898132613!5m2!1sen!2sus"
@@ -194,6 +195,16 @@
           allowfullscreen=""
           loading="lazy"
         ></iframe>
+        <div class="contact-form">
+          <h3>Contact Us</h3>
+          <form>
+            <label for="name">Your Name</label>
+            <input type="text" id="name" placeholder="Your Name" />
+            <label for="contact-message">Message</label>
+            <textarea id="contact-message" placeholder="Message"></textarea>
+            <button type="submit">Submit</button>
+          </form>
+        </div>
         <div>
           <h3>Run Buddy</h3>
           <p>
