added flex to h2 elements

--- a/index.html
+++ b/index.html
@@ -96,18 +96,24 @@
 
     <!--"what we do" section-->
     <section id="what-we-do" class="intro">
-      <h2 class="section-title primary-border">What We Do</h2>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore
-        consequatur quasi nulla pariatur dolor libero repellendus dolore commodi
-        aspernatur provident, ullam, qui voluptas cumque. Sed beatae facere
-        perspiciatis iure ipsum.
-      </p>
+      <div class="flex-row">
+        <h2 class="section-title primary-border">What We Do</h2>
+      </div>
+      <div class="flex-row">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore
+          consequatur quasi nulla pariatur dolor libero repellendus dolore
+          commodi aspernatur provident, ullam, qui voluptas cumque. Sed beatae
+          facere perspiciatis iure ipsum.
+        </p>
+      </div>
     </section>
 
     <!--"what you do" section-->
     <section id="what-you-do" class="steps">
-      <h2 class="section-title secondary-border">What You Do</h2>
+      <div class="flex-row">
+        <h2 class="section-title secondary-border">What You Do</h2>
+      </div>
 
       <div>
         <img src="/assets/images/step-1.svg" alt="" />
@@ -139,7 +145,9 @@
 
     <!--"meet the trainers" section-->
     <section id="your-trainers" class="trainers">
-      <h2 class="section-title primary-border">Meet The Trainers</h2>
+      <div class="flex-row">
+        <h2 class="section-title primary-border">Meet The Trainers</h2>
+      </div>
       <!--First trainer-->
       <article class="trainer">
         <img
@@ -186,7 +194,9 @@
 
     <!--Reach out section-->
     <section id="reach-out" class="contact">
-      <h2 class="section-title secondary-border">Reach Out</h2>
+      <div class="flex-row">
+        <h2 class="section-title secondary-border">Reach Out</h2>
+      </div>
 
       <div class="contact-info">
         <iframe
