add flexbox to the trainers

--- a/index.html
+++ b/index.html
@@ -172,52 +172,63 @@
     </section>
 
     <!--"meet the trainers" section-->
-    <section id="your-trainers" class="trainers">
+    <section id="your-trainers">
       <div class="flex-row">
         <h2 class="section-title primary-border">Meet The Trainers</h2>
       </div>
       <!--First trainer-->
-      <article class="trainer">
-        <img
-          src="/assets/images/trainer-1.jpg"
-          alt="Aaron Stephens is his name"
-        />
-        <div class="trainer-bio text-left">
-          <h3>Aaron Stephens</h3>
-          <h4>Speed / Strength</h4>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae
-            quo, quis dolor adipisci odio deserunt sunt illum. Tempore odio quos
-            animi numquam soluta. Commodi illum voluptate ad sunt, quas autem.
-          </p>
-        </div>
-      </article>
-      <!--Second trainer-->
-      <article class="trainer">
-        <div class="trainer-bio text-right">
-          <h3>Joanna Gill</h3>
-          <h4>Endurance</h4>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae
-            quo, quis dolor adipisci odio deserunt sunt illum. Tempore odio quos
-            animi numquam soluta. Commodi illum voluptate ad sunt, quas autem.
-          </p>
-        </div>
-        <img src="/assets/images/trainer-2.jpg" alt="Joanna Gill is her name" />
-      </article>
-      <!--Third trainer-->
-      <article class="trainer">
-        <img src="/assets/images/trainer-3.jpg" alt="Harry Smith is his name" />
-        <div class="trainer-bio text-left">
-          <h3>Harry "The Headband" Smith</h3>
-          <h4>Strength</h4>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae
-            quo, quis dolor adipisci odio deserunt sunt illum. Tempore odio quos
-            animi numquam soluta. Commodi illum voluptate ad sunt, quas autem.
-          </p>
-        </div>
-      </article>
+      <div class="trainers">
+        <article class="trainer">
+          <img
+            src="/assets/images/trainer-1.jpg"
+            alt="Aaron Stephens is his name"
+          />
+          <div class="trainer-bio">
+            <h3 class="trainer-name">Aaron Stephens</h3>
+            <h4 class="trainer-role">Speed / Strength</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae
+              quo, quis dolor adipisci odio deserunt sunt illum. Tempore odio
+              quos animi numquam soluta. Commodi illum voluptate ad sunt, quas
+              autem.
+            </p>
+          </div>
+        </article>
+        <!--Second trainer-->
+        <article class="trainer">
+          <img
+            src="/assets/images/trainer-2.jpg"
+            alt="Joanna Gill is her name"
+          />
+          <div class="trainer-bio">
+            <h3 class="trainer-name">Joanna Gill</h3>
+            <h4 class="trainer-role">Endurance</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae
+              quo, quis dolor adipisci odio deserunt sunt illum. Tempore odio
+              quos animi numquam soluta. Commodi illum voluptate ad sunt, quas
+              autem.
+            </p>
+          </div>
+        </article>
+        <!--Third trainer-->
+        <article class="trainer">
+          <img
+            src="/assets/images/trainer-3.jpg"
+            alt="Harry Smith is his name"
+          />
+          <div class="trainer-bio">
+            <h3 class="trainer-name">Harry "The Headband" Smith</h3>
+            <h4 class="trainer-role">Strength</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae
+              quo, quis dolor adipisci odio deserunt sunt illum. Tempore odio
+              quos animi numquam soluta. Commodi illum voluptate ad sunt, quas
+              autem.
+            </p>
+          </div>
+        </article>
+      </div>
     </section>
 
     <!--Reach out section-->
