--- a/index.html
+++ b/index.html
@@ -238,22 +238,6 @@
       </div>
 
       <div class="contact-info">
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d45153.421307922516!2d-93.27950618872133!3d44.982506533216394!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x52b32db3da79f561%3A0xae145916e9974058!2sTarget!5e0!3m2!1sen!2sus!4v1645898132613!5m2!1sen!2sus"
-          style="border: 0"
-          allowfullscreen=""
-          loading="lazy"
-        ></iframe>
-        <div class="contact-form">
-          <h3>Contact Us</h3>
-          <form>
-            <label for="name">Your Name</label>
-            <input type="text" id="name" placeholder="Your Name" />
-            <label for="contact-message">Message</label>
-            <textarea id="contact-message" placeholder="Message"></textarea>
-            <button type="submit">Submit</button>
-          </form>
-        </div>
         <div>
           <h3>Run Buddy</h3>
           <p>
@@ -269,6 +253,23 @@
             E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
           </address>
         </div>
+        <div class="contact-form">
+          <h3>Contact Us</h3>
+          <form>
+            <label for="name">Your Name</label>
+            <input type="text" id="name" placeholder="Your Name" />
+            <label for="contact-message">Message</label>
+            <textarea id="contact-message" placeholder="Message"></textarea>
+            <button class="submit" type="submit">Submit</button>
+          </form>
+        </div>
+
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d45153.421307922516!2d-93.27950618872133!3d44.982506533216394!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x52b32db3da79f561%3A0xae145916e9974058!2sTarget!5e0!3m2!1sen!2sus!4v1645898132613!5m2!1sen!2sus"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+        ></iframe>
       </div>
     </section>
 
