--- a/index.html
+++ b/index.html
@@ -77,16 +77,22 @@
           />
           <p>
             Have you worked out with a trainer before?
-            <input type="radio" name="trainer-confirm" id="trainer-yes" />
-            <label for="trainer-yes">Yes</label>
-            <input type="radio" name="trainer-confirm" id="trainer-no" />
-            <label for="trainer-no">No</label>
+            <span class="radio-wrapper">
+              <input type="radio" name="trainer-confirm" id="trainer-yes" />
+              <label for="trainer-yes">Yes</label>
+            </span>
+            <span class="radio-wrapper">
+              <input type="radio" name="trainer-confirm" id="trainer-no" />
+              <label for="trainer-no">No</label>
+            </span>
           </p>
 
           <p>
-            <input type="checkbox" id="checkbox" name="age-confirm" />
-            <label for="checkbox"
-              >I acknowledge that I am atleast 18 years of age</label
+            <span class="checkbox-wrapper">
+              <input type="checkbox" id="checkbox" name="age-confirm" />
+              <label for="checkbox"
+                >
+            </span>I acknowledge that I am atleast 18 years of age</label
             >
           </p>
           <button type="submit">Get Running!</button>
